<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.dartmouth.cs.raunakbhojwani.myruns.ProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/ui_profile_picture_header" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:baselineAligned="false" >

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/ui_profile_picture_description"
                    android:focusable="true"
                    android:focusableInTouchMode="true" />

                <Button
                    android:id="@+id/changeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ui_change_button_header"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:onClick="onChangeClicked" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/ui_user_name_header" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:inputType="textPersonName"
                android:hint="@string/user_name"
                android:id="@+id/user_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/ui_user_email_header" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:inputType="textEmailAddress"
                android:hint="@string/user_email"
                android:id="@+id/user_email" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/ui_user_phone_header" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:inputType="phone"
                android:hint="@string/user_phone"
                android:id="@+id/user_phone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/ui_user_gender_header" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:id="@+id/user_gender" >

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_female"
                    android:layout_weight="1"
                    android:id="@+id/femaleRadioButton" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_male"
                    android:layout_weight="1"
                    android:id="@+id/maleRadioButton" />

            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/ui_user_class_header" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:inputType="numberDecimal"
                android:hint="@string/user_class"
                android:id="@+id/user_class" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/ui_user_major_header" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:inputType="textPersonName"
                android:hint="@string/user_major"
                android:id="@+id/user_major" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:orientation="horizontal" >

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ui_save_button_header"
                    android:layout_weight="1"
                    android:id="@+id/profile_save_button"
                    android:onClick="onSaveClicked"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ui_cancel_button_header"
                    android:layout_weight="1"
                    android:id="@+id/profile_cancel_button"
                    android:onClick="onCancelClicked"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
