<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.dartmouth.cs.raunakbhojwani.myruns.StartFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/ui_input_type_header"
            android:id="@+id/input_type_header" />

        <!-- Spinners to scroll through drop down menu of an array of choices -->
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:entries="@array/input_types_array"
            android:id="@+id/input_type_spinner">
        </Spinner>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/ui_activity_type_header"
            android:id="@+id/activity_type_header"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:entries="@array/activity_types_array"
            android:id="@+id/activity_type_spinner">
        </Spinner>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="75dp"
                android:layout_marginBottom="5dp"
                android:text="@string/ui_start_button_header"
                android:id="@+id/start_button" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/ui_sync_button_header"
                android:id="@+id/sync_button" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
