<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_display_entry"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.dartmouth.cs.raunakbhojwani.myruns.DisplayEntryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/ui_input_type_header"
            android:id="@+id/input_type_text_view" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:inputType="text"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:clickable="false"
            android:cursorVisible="false"
            android:hint="Input Type"
            android:ems="10"
            android:id="@+id/input_type_edit_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/ui_activity_type_header"
            android:id="@+id/activity_type_text_view" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="text"
            android:clickable="false"
            android:cursorVisible="false"
            android:hint="Activity Type"
            android:ems="10"
            android:id="@+id/activity_type_edit_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/date_and_time"
            android:id="@+id/date_text_view" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:inputType="text"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:clickable="false"
            android:cursorVisible="false"
            android:hint="@string/date_and_time"
            android:ems="10"
            android:id="@+id/date_edit_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/duration"
            android:id="@+id/duration_text_view" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:inputType="text"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:clickable="false"
            android:cursorVisible="false"
            android:hint="Duration"
            android:ems="10"
            android:id="@+id/duration_edit_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/distance"
            android:id="@+id/distance_text_view" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:inputType="text"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:clickable="false"
            android:cursorVisible="false"
            android:hint="Distance"
            android:ems="10"
            android:id="@+id/distance_edit_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/calories"
            android:id="@+id/calories_text_view" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:inputType="text"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:clickable="false"
            android:cursorVisible="false"
            android:hint="Calories"
            android:ems="10"
            android:id="@+id/calories_edit_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/heart_rate"
            android:id="@+id/heart_rate_text_view" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:inputType="text"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:clickable="false"
            android:cursorVisible="false"
            android:hint="Heart Rate"
            android:ems="10"
            android:id="@+id/heart_rate_edit_text" />

    </LinearLayout>

</ScrollView>
